# OpenLogReplicator

docs/: DeploymentGuide.md  LearningGuide.md
src/: CMakeLists.txt  OpenLogReplicator.cpp  StreamClient.cpp  main.cpp
src/builder/: Builder.cpp  Builder.h  BuilderJson.cpp  BuilderProtobuf.cpp
src/common/: Ctx.h  DbTable.h  Format.h  MemoryManager.cpp  Thread.h  XmlCtx.h
src/common/exception/: DataException.h  RuntimeException.h
src/common/table/: SysCol.h  SysObj.h
src/common/types/: Scn.h  Seq.h
src/database/: DatabaseConnection.h
src/metadata/: Checkpoint.h  Metadata.h  Schema.h  SchemaElement.h  Serializer.h  SerializerJson.cpp  Table.h
src/parser/: OpCode.h  OpCode0B0C.h  Parser.cpp  Parser.h  RedoLogRecord.h
src/reader/: Reader.cpp  Reader.h
src/replicator/: Replicator.cpp  Replicator.h  ReplicatorBatch.cpp  ReplicatorOnline.h
src/stream/: Stream.h  StreamNetwork.h  StreamZeroMQ.h
src/transaction/: Transaction.h  TransactionBuffer.h  TransactionChunk.h
src/writer/: Writer.cpp  Writer.h  WriterFile.cpp  WriterKafka.h  WriterStream.cpp  WriterStream.h
